--- a/SeudoBuild.Client.Unity/SeudoBuild.Client.Unity.csproj
+++ b/SeudoBuild.Client.Unity/SeudoBuild.Client.Unity.csproj
@@ -30,9 +30,11 @@
     <Reference Include="System" />
     <Reference Include="UnityEditor">
       <HintPath>..\..\..\..\..\..\Applications\Unity\Unity.app\Contents\Managed\UnityEditor.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\..\Applications\Unity\Unity.app\Contents\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
