--- a/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Modules.GitSource.Data/SeudoBuild.Pipeline.Modules.GitSource.Data.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Modules.GitSource.Data/SeudoBuild.Pipeline.Modules.GitSource.Data.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FB9D0644-FFDC-4C77-90BA-15EC44A333F5}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.GitSource.Data</RootNamespace>
+    <RootNamespace>SeudoBuild.Modules.GitSource</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.GitSource.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
