--- a/SeudoBuild.Modules/SeudoBuild.Modules.SMBDistribute.Data/SeudoBuild.Pipeline.Modules.SMBDistribute.Data.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.SMBDistribute.Data/SeudoBuild.Pipeline.Modules.SMBDistribute.Data.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3B3E5B4C-AB0F-48BA-B264-51E8C4E6324D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.SMBDistribute.Data</RootNamespace>
+    <RootNamespace>SeudoBuild.Modules.SMBDistribute</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.SMBDistribute.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
