Blocking out Unity client

--- a/SeudoBuild.Client.Unity/SeudoBuild.Client.Unity.csproj
+++ b/SeudoBuild.Client.Unity/SeudoBuild.Client.Unity.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeudoBuildEditor.cs" />
+    <Compile Include="AgentBrowser.cs" />
+    <Compile Include="EditorCoroutine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -51,6 +53,10 @@
     <ProjectReference Include="..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
       <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
       <Name>SeudoBuild.Pipeline.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Net\SeudoBuild.Net.csproj">
+      <Project>{8195BBFF-470D-42DF-B46F-C8C97B35CED4}</Project>
+      <Name>SeudoBuild.Net</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
