--- a/Clients/SeudoBuild.Client.Desktop.Mac/Info.plist
+++ b/Clients/SeudoBuild.Client.Desktop.Mac/Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleIconFile</key>
 	<string>TestIcon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.SeudoBuild.Client.Desktop.Mac</string>
+	<string>com.yourcompany.SeudoBuild.Client.Desktop.XamMac2</string>
 	<key>CFBundleName</key>
-	<string>SeudoBuild.Client.Desktop.Mac</string>
+	<string>SeudoBuild.Client.Desktop.XamMac2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
