--- a/Clients/SeudoBuild.Client.Desktop.Mac/packages.config
+++ b/Clients/SeudoBuild.Client.Desktop.Mac/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Eto.Forms" version="2.3.0" targetFramework="net45" />
-  <package id="Eto.Platform.Mac" version="2.3.0" targetFramework="net45" />
+  <package id="Eto.Forms" version="2.3.0" targetFramework="xamarinmac20" />
+  <package id="Eto.Platform.XamMac2" version="2.3.0" targetFramework="xamarinmac20" />
 </packages>
