--- a/SeudoBuild.Agent/SeudoBuild.Agent.csproj
+++ b/SeudoBuild.Agent/SeudoBuild.Agent.csproj
@@ -62,6 +62,7 @@
     <Compile Include="API\BuildResult.cs" />
     <Compile Include="Builder.cs" />
     <Compile Include="API\Bootstrapper.cs" />
+    <Compile Include="AgentLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
