Added build submitter to agent

--- a/SeudoBuild.Agent/SeudoBuild.Agent.csproj
+++ b/SeudoBuild.Agent/SeudoBuild.Agent.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Builder.cs" />
     <Compile Include="API\Bootstrapper.cs" />
     <Compile Include="AgentLocator.cs" />
+    <Compile Include="BuildSubmitter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
