--- a/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
+++ b/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IWorkspace.cs" />
+    <Compile Include="ITargetWorkspace.cs" />
     <Compile Include="IFileSystem.cs" />
     <Compile Include="IMacros.cs" />
     <Compile Include="Platform.cs" />
