--- a/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
+++ b/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Platform.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="LogEnums.cs" />
+    <Compile Include="IProjectWorkspace.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
