--- a/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
+++ b/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
@@ -30,14 +30,17 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ITargetWorkspace.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IWorkspace.cs" />
     <Compile Include="IFileSystem.cs" />
     <Compile Include="IMacros.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="LogEnums.cs" />
     <Compile Include="IProjectWorkspace.cs" />
+    <Compile Include="TargetDirectory.cs" />
+    <Compile Include="ProjectDirectory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
