--- a/SeudoBuild.Core/SeudoBuild.Core.csproj
+++ b/SeudoBuild.Core/SeudoBuild.Core.csproj
@@ -24,7 +24,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <NoWarn></NoWarn>
+    <NoWarn>
+    </NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -33,12 +34,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MacFileSystem.cs" />
+    <Compile Include="PlatformUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Macros.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="TargetWorkspace.cs" />
-    <Compile Include="FileSystem.cs" />
+    <Compile Include="WindowsFileSystem.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ProjectWorkspace.cs" />
   </ItemGroup>
