--- a/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
+++ b/SeudoBuild.Core.Shared/SeudoBuild.Core.Shared.csproj
@@ -31,13 +31,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ITargetWorkspace.cs" />
+    <Compile Include="LogStyle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IWorkspace.cs" />
     <Compile Include="IFileSystem.cs" />
     <Compile Include="IMacros.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="ILogger.cs" />
-    <Compile Include="LogEnums.cs" />
+    <Compile Include="LogType.cs" />
     <Compile Include="IProjectWorkspace.cs" />
     <Compile Include="TargetDirectory.cs" />
     <Compile Include="ProjectDirectory.cs" />
