--- a/SeudoBuild.Core/SeudoBuild.Core.csproj
+++ b/SeudoBuild.Core/SeudoBuild.Core.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{96AEC5D7-D646-4A04-8624-383CC86C047C}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild</RootNamespace>
+    <RootNamespace>SeudoBuild.Core</RootNamespace>
     <AssemblyName>SeudoBuild.Core</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
@@ -34,18 +34,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MacFileSystem.cs" />
+    <Compile Include="FileSystems\MacFileSystem.cs" />
+    <Compile Include="FileSystems\WindowsFileSystem.cs" />
     <Compile Include="PlatformUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Macros.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="TargetWorkspace.cs" />
-    <Compile Include="WindowsFileSystem.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ProjectWorkspace.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\SeudoBuild.Core.Shared\SeudoBuild.Core.Shared.csproj">
       <Project>{2F239808-F280-4A32-B2BB-437A61304BE1}</Project>
