--- a/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute.Shared/SeudoBuild.Pipeline.Modules.FTPDistribute.Shared.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute.Shared/SeudoBuild.Pipeline.Modules.FTPDistribute.Shared.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{720C67C1-8867-4F66-8F3A-EF6703276DB8}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.FTPDistribute</RootNamespace>
+    <RootNamespace>SeudoBuild.Pipeline.Modules.FTPDistribute</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.FTPDistribute.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
