--- a/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute/SeudoBuild.Pipeilne.Modules.FTPDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute/SeudoBuild.Pipeilne.Modules.FTPDistribute.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{12283418-7700-4402-82F0-AF8567DD80B9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.FTPDistribute</RootNamespace>
+    <RootNamespace>SeudoBuild.Pipeline.Modules.FTPDistribute</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.FTPDistribute</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
