--- a/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Pipeline.Modules.GitSource.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Pipeline.Modules.GitSource.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{98F1110E-302E-4F6E-99EE-F73118AA8D71}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.GitSource</RootNamespace>
+    <RootNamespace>SeudoBuild.Pipeline.Modules.GitSource</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.GitSource</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
