--- a/SeudoBuild.Modules/SeudoBuild.Modules.SteamDistribute/SeudoBuild.Pipeline.Modules.SteamDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.SteamDistribute/SeudoBuild.Pipeline.Modules.SteamDistribute.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6096B113-5817-4CE8-843C-CF5CBA64D655}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.SteamDistribute</RootNamespace>
+    <RootNamespace>SeudoBuild.Pipeline.Modules.SteamDistribute</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.SteamDistribute</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
