--- a/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Pipeline.Modules.UnityBuild.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Pipeline.Modules.UnityBuild.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{915EAE8E-A903-4DB6-9BE5-3BA7F684A3BE}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.UnityBuild</RootNamespace>
+    <RootNamespace>SeudoBuild.Pipeline.Modules.UnityBuild</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.UnityBuild</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
