--- a/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive/SeudoBuild.Pipeline.Modules.ZipArchive.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive/SeudoBuild.Pipeline.Modules.ZipArchive.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{73895975-FD53-407B-9F97-E6622BEB1049}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.ZipArchive</RootNamespace>
+    <RootNamespace>SeudoBuild.Pipeline.Modules.ZipArchive</RootNamespace>
     <AssemblyName>SeudoBuild.Pipeline.Modules.ZipArchive</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
