--- a/SeudoBuild.Pipeline.Tests/SeudoBuild.Pipeline.Tests.csproj
+++ b/SeudoBuild.Pipeline.Tests/SeudoBuild.Pipeline.Tests.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6C63AC5D-BF62-4F5D-90A5-478E93CCB8DB}</ProjectGuid>
+    <ProjectGuid>{0AC47D40-84B6-45EC-A851-94D896B72EC4}</ProjectGuid>
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SeudoBuild.Agent.Tests</RootNamespace>
-    <AssemblyName>SeudoBuild.Agent.Tests</AssemblyName>
+    <RootNamespace>SeudoBuild.Pipeline.Tests</RootNamespace>
+    <AssemblyName>SeudoBuild.Pipeline.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,56 +33,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc">
-      <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="NSubstitute, Version=3.1.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca">
-      <HintPath>..\packages\NSubstitute.3.1.0\lib\net46\NSubstitute.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AgentLocatorTest.cs" />
-    <Compile Include="AgentNameTest.cs" />
-    <Compile Include="BuilderTest.cs" />
-    <Compile Include="BuildQueueTest.cs" />
-    <Compile Include="BuildSubmitterTest.cs" />
+    <Compile Include="ModuleLoaderFactoryTest.cs" />
+    <Compile Include="ModuleLoaderTest.cs" />
+    <Compile Include="ModuleRegistryTest.cs" />
+    <Compile Include="PipelineRunnerTest.cs" />
+    <Compile Include="ProjectPipelineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SeudoBuild.Agent.Shared\SeudoBuild.Agent.Shared.csproj">
-      <Project>{9d88ecc6-dca7-4991-8e74-c58fb180304d}</Project>
-      <Name>SeudoBuild.Agent.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Agent\SeudoBuild.Agent.csproj">
-      <Project>{64e2d8f1-b08c-4b87-a283-252c31693dc6}</Project>
-      <Name>SeudoBuild.Agent</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Core.Shared\SeudoBuild.Core.Shared.csproj">
-      <Project>{2f239808-f280-4a32-b2bb-437a61304be1}</Project>
-      <Name>SeudoBuild.Core.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Pipeline.Shared\SeudoBuild.Pipeline.Shared.csproj">
-      <Project>{ce7e1b76-b604-455a-ba80-5cb54dac389c}</Project>
-      <Name>SeudoBuild.Pipeline.Shared</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
